--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,18 +38,21 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/orange"
         android:padding="20dp"
         android:text="WORK HERE"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/orange"
         android:padding="20dp"
         android:text="WORK HERE"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/orange"
         android:padding="20dp"
         android:text="WORK HERE"/>
     
