--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,13 @@
             android:background="@color/colorPrimary"
             android:padding="20dp"
             android:text="WORK HERE"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:padding="20dp"
+            android:text="WORK HERE"/>
     </LinearLayout>
 
     <LinearLayout
